# axum-live-coding

./: Cargo.toml  README.md  final-prepared.md  final.md
greetings/: Peter
resources/: list.sh
snippets/: auth.rs  backoff.rs  catch_panics.rs  handle_error_anyhow.rs  handle_error_snafu.rs  handle_error_thiserror.rs  mongo_and_error_handling.rs  non_send_handlers.rs  path.rs  path_and_json.rs  streaming.rs  testing.rs  tracelayer.rs  tracing.rs
src/: main.rs
