[package]
name = "axum-live-coding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.57", features = ["backtrace"] }
async-trait = "0.1.53"
axum = "0.5.4"
axum-macros = "0.2.0"
backtrace = "0.3.65"
mongodb = "2.2.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
snafu = { version = "0.7.1", features = ["backtraces"] }
thiserror = "1.0.31"
tokio = { version = "1.18.2", features = ["full"] }
tower = "0.4.12"
tower-http = { version = "0.3.3", features = ["trace", "catch-panic"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "fmt", "json"] }

[profile.release]
debug = 1 # "1: line tables only", cf https://doc.rust-lang.org/cargo/reference/profiles.html

[dev-dependencies]
hyper = "0.14.18"
# lto = "thin"
