[package]
name = "axum-live-coding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# "minimal developer effort" error handling
anyhow = { version = "1.0.57", features = ["backtrace"] }
# helper to allow implementing async traits, currently needed until language supports this
async-trait = "0.1.53"
# web framework
axum = "0.5.4"
# for debug_helper
axum-macros = "0.2.0"
# retry with exponential backoff
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
# backtraces, currently needed as backtrace handling is unstable in rust
backtrace = "0.3.65"
futures = "0.3.21"
http = "0.2.7"
hyper = "0.14.18"
# mongodb client
mongodb = "2.2.1"
# http client
reqwest = "0.11.10"
# serialization / deserialization
serde = { version = "1.0.137", features = ["derive"] }
# json serialization / deserialization
serde_json = "1.0.81"
# structured error handling
snafu = { version = "0.7.1", features = ["backtraces"] }
# async runtime, needed to execute any async function
tokio = { version = "1.18.2", features = ["full"] }
tokio-stream = { version = "0.1.8", features = ["io-util"] }
tokio-util = { version = "0.7.2", features = ["io"] }
# provides a service trait and implementations that can be used as axum middleware
tower = "0.4.12"
tower-http = { version = "0.3.3", features = ["trace", "catch-panic"] }
# "better logging" plus integration into opentelemetry etc.
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "fmt", "json"] }

[dev-dependencies]

[profile.release]
debug = 1 # "1: line tables only", cf https://doc.rust-lang.org/cargo/reference/profiles.html
lto = "thin"
